k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-portal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-portal
  template:
    metadata:
      labels:
        app: customer-portal
    spec:
      containers:
      - name: customer-portal
        image: 103102677964.dkr.ecr.us-east-1.amazonaws.com/springclinic:latest
        ports:
        - containerPort: 8080
