k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-portal-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
  - host: app.ravndclsn.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: customer-portal-service
            port:
              number: 80
